# icp_calibration

./: CMakeLists.txt  icp_pointclouds.cpp  mesh_sampling.cpp
data/: joint_states.txt  joint_states_2.txt  kinect_2_sampled.pcd  kinect_2_sampled.ply  kinect_base_sampled.pcd  kinect_base_sampled.ply  kinect_base_sampled_transformed.pcd  kinect_base_sampled_transformed.ply  kinect_base_sampled_trash.pcd  kinect_base_sampled_trash.ply  motoman_base.ply  motoman_base_attempt.ply  motoman_pointcloud.pcd  motoman_pointcloud_left_sampled.pcd  motoman_pointcloud_left_sampled.ply  motoman_pointcloud_left_sampled_2.ply  raw_camera_pose.txt
src/icp_calibration/: CMakeLists.txt  icp_pointclouds.cpp  package.xml  results-new-kinect-loc.txt
